--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,7 +26,7 @@
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
   }
-  .dark {
+  html.dark {
     @apply bg-gray-900 text-white;
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
